Bug 1024587 - IonMonkey: Implement CharCodeAt Recover Instruction. r=nbp,evilpie